environments/lf-demo/apps/lf-tx-simulator/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/version: 0.0.3
    app.kubernetes.io/name: lf-tx-simulator
  name: lf-tx-simulator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: 0.0.3
      app.kubernetes.io/name: lf-tx-simulator
  template:
    metadata:
      labels:
        app.kubernetes.io/version: 0.0.3
        app.kubernetes.io/name: lf-tx-simulator
    spec:
      containers:
      - args:
        - -Dquarkus.http.host=0.0.0.0
        - -Djava.util.logging.manager=org.jboss.logmanager.LogManager
        - -jar
        - /deployments/quarkus-run.jar
        command:
        - java
        image: quay.io/jbcodeforce/lf-tx-simulator:0.0.3
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/live
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: lf-tx-simulator
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
      serviceAccount: lf-demo-job-sa
