environments/lf-demo/apps/lf-tx-simulator/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/name: lf-tx-simulator
    app.kubernetes.io/version: 0.0.1
  name: lf-tx-simulator
spec:
  host: ""
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: lf-tx-simulator
